--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,7 +1,7 @@
 Release History
 ***************
 
-1.0a5 (2010-03-21)
+1.0a5 (2011-03-21)
 ------------------
 
 - Made deployment steps more discrete. uploadbuildout, uploadeggs and buildout make sense to be called by themselves.
@@ -20,7 +20,7 @@ Release History
 - Fixed typos in docs [Jean Jordaan]
 
 
-1.0a4 (2010-01-06)
+1.0a4 (2011-01-06)
 ------------------
 - using decorators for setting user used for command
 - cleaned up user adding code. renamed to bootstrap_users
@@ -39,8 +39,8 @@ Release History
 - changes to make more freebsd friendly (Tom Lazar)
 - setowners on every deployment
 
-1.0a3 (??)
-----------
+1.0a3 (unreleased)
+------------------
 - now using entrypoints for fabfiles
 
 1.0a2 (2010-05-27)
